# MeshMC

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  CMakePresets.json  COPYING.md  README.md  REUSE.toml  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.yml  suggestion.yml
.github/actions/setup-dependencies/: action.yml
.github/workflows/: build.yml  container.yml  nix.yml
branding/: MeshMC.manifest  genicons.sh  meshmc.6.scd.in  meshmc.rc  win_install.nsi.in
buildconfig/: BuildConfig.cpp.in  BuildConfig.h
cmake/: QMakeQuery.cmake  UnitTest.cmake
cmake/UnitTest/: test.rc
launcher/: Application.cpp  Application.h  ApplicationMessage.cpp  ApplicationMessage.h  BaseInstaller.cpp  BaseInstaller.h  BaseInstance.cpp  BaseInstance.h  BaseVersion.h  BaseVersionList.cpp  BaseVersionList.h  CMakeLists.txt  Commandline.cpp  Commandline.h  DefaultVariable.h  DesktopServices.cpp  DesktopServices.h  Exception.h  ExponentialSeries.h  FileSystem.cpp  FileSystem.h  FileSystem_test.cpp  Filter.cpp  Filter.h  GZip.cpp  GZip.h  GZip_test.cpp  HoeDown.h  InstanceCopyTask.cpp  InstanceCopyTask.h  InstanceCreationTask.cpp  InstanceCreationTask.h  InstanceImportTask.cpp  InstanceImportTask.h  InstanceList.cpp  InstanceList.h  InstancePageProvider.h  InstanceTask.cpp  InstanceTask.h  JavaCommon.cpp  (+38 more)
launcher/icons/: IconList.cpp  IconList.h  IconUtils.cpp  IconUtils.h  MMCIcon.cpp  MMCIcon.h
launcher/java/: JavaChecker.cpp  JavaChecker.h  JavaCheckerJob.cpp  JavaCheckerJob.h  JavaInstall.cpp  JavaInstall.h  JavaInstallList.cpp  JavaInstallList.h  JavaUtils.cpp  JavaUtils.h  JavaVersion.cpp  JavaVersion.h  JavaVersion_test.cpp
launcher/java/download/: JavaDownloadTask.cpp  JavaDownloadTask.h  JavaRuntime.h
launcher/launch/: LaunchStep.cpp  LaunchStep.h  LaunchTask.cpp  LaunchTask.h  LogModel.cpp  LogModel.h
launcher/launch/steps/: CheckJava.cpp  CheckJava.h  LookupServerAddress.cpp  LookupServerAddress.h  PostLaunchCommand.cpp  PostLaunchCommand.h  PreLaunchCommand.cpp  PreLaunchCommand.h  TextPrint.cpp  TextPrint.h  Update.cpp  Update.h
launcher/meta/: BaseEntity.cpp  BaseEntity.h  Index.cpp  Index.h  Index_test.cpp  JsonFormat.cpp  JsonFormat.h  Version.cpp  Version.h  VersionList.cpp  VersionList.h
launcher/minecraft/: AssetsUtils.cpp  AssetsUtils.h  Component.cpp  Component.h  ComponentUpdateTask.cpp  ComponentUpdateTask.h  ComponentUpdateTask_p.h  GradleSpecifier.h  GradleSpecifier_test.cpp  LaunchProfile.cpp  LaunchProfile.h  Library.cpp  Library.h  Library_test.cpp  MinecraftInstance.cpp  MinecraftInstance.h  MinecraftLoadAndCheck.cpp  MinecraftLoadAndCheck.h  MinecraftUpdate.cpp  MinecraftUpdate.h  MojangDownloadInfo.h  MojangVersionFormat.cpp  MojangVersionFormat.h  MojangVersionFormat_test.cpp  OneSixVersionFormat.cpp  OneSixVersionFormat.h  OpSys.cpp  OpSys.h  PackProfile.cpp  PackProfile.h  PackProfile_p.h  ParseUtils.cpp  ParseUtils_test.cpp  ProfileUtils.cpp  ProfileUtils.h  Rule.cpp  Rule.h  VersionFile.cpp  VersionFile.h  VersionFilterData.cpp  (+5 more)
launcher/minecraft/auth/: AccountData.cpp  AccountData.h  AccountList.cpp  AccountList.h  AccountTask.cpp  AccountTask.h  AuthRequest.cpp  AuthRequest.h  AuthSession.cpp  AuthSession.h  AuthStep.cpp  AuthStep.h  MinecraftAccount.cpp  MinecraftAccount.h  Parsers.cpp  Parsers.h
launcher/minecraft/gameoptions/: GameOptions.cpp  GameOptions.h
launcher/minecraft/launch/: ClaimAccount.cpp  ClaimAccount.h  CreateGameFolders.cpp  CreateGameFolders.h  DirectJavaLaunch.cpp  DirectJavaLaunch.h  ExtractNatives.cpp  ExtractNatives.h  LauncherPartLaunch.cpp  LauncherPartLaunch.h  MeshMCPartLaunch.cpp  MeshMCPartLaunch.h  MinecraftServerTarget.cpp  MinecraftServerTarget.h  ModMinecraftJar.cpp  ModMinecraftJar.h  PrintInstanceInfo.cpp  PrintInstanceInfo.h  ReconstructAssets.cpp  ReconstructAssets.h  ScanModFolders.cpp  ScanModFolders.h  VerifyJavaInstall.cpp  VerifyJavaInstall.h
launcher/minecraft/legacy/: LegacyInstance.cpp  LegacyInstance.h  LegacyModList.cpp  LegacyModList.h  LegacyUpgradeTask.cpp  LegacyUpgradeTask.h
launcher/minecraft/mod/: LocalModParseTask.cpp  LocalModParseTask.h  Mod.cpp  Mod.h  ModDetails.h  ModFolderLoadTask.cpp  ModFolderLoadTask.h  (+7 more)
launcher/mojang/: PackageManifest.cpp  PackageManifest.h  PackageManifest_test.cpp
launcher/net/: ByteArraySink.h  ChecksumValidator.h  Download.cpp  Download.h  FileSink.cpp  FileSink.h  HttpMetaCache.cpp  HttpMetaCache.h  MetaCacheSink.cpp  MetaCacheSink.h  Mode.h  NetAction.h  NetJob.cpp  NetJob.h  PasteUpload.cpp  PasteUpload.h  Sink.h  Validator.h
launcher/news/: NewsChecker.cpp  NewsChecker.h  NewsEntry.cpp  NewsEntry.h
launcher/notifications/: NotificationChecker.cpp  NotificationChecker.h
launcher/pathmatcher/: FSTreeMatcher.h  IPathMatcher.h  MultiMatcher.h  RegexpMatcher.h
launcher/screenshots/: ImgurAlbumCreation.cpp  ImgurAlbumCreation.h  ImgurUpload.cpp  ImgurUpload.h  Screenshot.h
launcher/settings/: INIFile.cpp  INIFile.h  INIFile_test.cpp  INISettingsObject.cpp  INISettingsObject.h  OverrideSetting.cpp  OverrideSetting.h  PassthroughSetting.cpp  PassthroughSetting.h  Setting.cpp  Setting.h  SettingsObject.cpp  SettingsObject.h
launcher/tasks/: SequentialTask.cpp  SequentialTask.h  Task.cpp  Task.h
launcher/tools/: BaseExternalTool.cpp  BaseExternalTool.h  BaseProfiler.cpp  BaseProfiler.h  JProfiler.cpp  JProfiler.h  JVisualVM.cpp  JVisualVM.h  MCEditTool.cpp  MCEditTool.h
launcher/translations/: POTranslator.cpp  POTranslator.h  TranslationsModel.cpp  TranslationsModel.h
launcher/ui/: ColorCache.cpp  ColorCache.h  GuiUtil.cpp  GuiUtil.h  InstanceWindow.cpp  InstanceWindow.h  MainWindow.cpp  MainWindow.h
launcher/updater/: DownloadTask.cpp  DownloadTask.h  DownloadTask_test.cpp  GoUpdate.cpp  GoUpdate.h  UpdateChecker.cpp  UpdateChecker.h  UpdateChecker_test.cpp
libraries/: README.md
libraries/classparser/: CMakeLists.txt
libraries/iconfix/: CMakeLists.txt  xdgicon.cpp  xdgicon.h
libraries/katabasis/: CMakeLists.txt
libraries/rainbow/: CMakeLists.txt
libraries/xz-embedded/: xzminidec.c
scripts/: checkpatch.pl
(+342 files in other folders)
